--- a/flask_page/templates/XSS_Bypass_result.html
+++ b/flask_page/templates/XSS_Bypass_result.html
@@ -14,6 +14,10 @@
         width: 100px;
         height: 100px;
       }
+      h2{
+        font-size: 1.125rem;
+        line-height: 1.75rem;
+      }
     </style>
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
@@ -25,12 +29,12 @@
         <div class="space-x-4">
           <a
             href="{{ url_for('input_tag_bp.input_tag') }}"
-            class="text-gray-500 hover:text-blue-600 font-bold"
+            class="text-blue-600 font-bold"
             >Input Tag Crawl</a
           >
           <a
             href="{{ url_for('comments_bp.comments') }}"
-            class="text-blue-600 font-bold"
+            class="text-gray-500 hover:text-blue-600 font-bold"
             >Comments Crawl</a
           >
           <a
@@ -55,43 +59,30 @@
       </nav>
     </header>
     <h1 class="font-bold text-blue-600 text-3xl flex justify-center m-5">
-      Comments Crawl
+      XSS Crawl Result
     </h1>
-    <p class="flex justify-center text-gray-500 m-5 text-center">
-      It will crawl all linked website with dfs algorithm.<br>
-      So, it may take some minute.
+    <p class="flex justify-center text-gray-500">
+      필터링필터링필터링
     </p>
-    <div class="flex justify-center w-screeen">
-      <form method="post" action="{{ url_for('comments_bp.comments') }}">
-        <label for="url" class="my-5 font-bold">Enter URL:</label>
-        <div class="relative box-border mt-5 mb-2">
-          <input
-            class="font-bold border-b-4 border-blue-600 w-96 h-8 rounded-full outline-0 bg-gray-200 px-5"
-            type="text"
-            id="url"
-            name="url"
-            required
-          />
-        </div>
-        <button
-          type="submit"
-          class="mb-4 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
+    <div class="flex flex-row justify-center">
+      <div class="flex flex-col mx-5 justify-center">
+        <a
+          href="{{ url_for('XSS_Bypass_bp.XSS') }}"
+          class="my-2 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          >Go back to Input Tag Crawl Page</a
         >
-          Submit
-        </button>
-        <p>
-          <a
-            href="/"
-            class="my-2 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
-            >Go back to Home Page</a
-          >
-        </p>
-      </form>
+        <a
+          href="/"
+          class="mt-2 mb-4 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          >Go back to Home Page</a
+        >
+      </div>
     </div>
+    <hr  />
+    {{ result_html|safe }}
     <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-300 flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
       <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
     </footer>
   </body>
 </html>
- 
