--- a/flask_page/templates/input_tag.html
+++ b/flask_page/templates/input_tag.html
@@ -48,7 +48,7 @@
             class="text-gray-500 hover:text-blue-600 font-bold"
             >Sql Injection</a
           >
-          <a href="/xss" class="text-gray-500 hover:text-blue-600 font-bold"
+          <a href="{{ url_for('XSS_Bypass_bp.XSS') }}" class="text-gray-500 hover:text-blue-600 font-bold"
             >XSS</a
           >
         </div>
