--- a/flask_page/templates/SQL.html
+++ b/flask_page/templates/SQL.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
-      XSS Vulnerability Check
+      SQL Vulnerability Check
     </h1>
     <p class="flex justify-center text-gray-500 m-5 text-center">
       It Needs Payload and Parameter
