--- a/flask_page/templates/input_tag.html
+++ b/flask_page/templates/input_tag.html
@@ -1,15 +1,11 @@
 <!--This page is 'site info crawl'-->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WVA Tools</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .grid-cell {
@@ -18,12 +14,15 @@
       }
     </style>
   </head>
+
   <body class="bg-gray-50 text-gray-900 font-sans">
+    <!--Header navigation bar-->
     <header class="bg-white shadow shadow-lg relative">
-      <nav
-        class="container mx-auto px-6 py-3 flex justify-between items-center"
-      >
+      <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+        <!--WVA logo-->
         <a href="/" class="text-3xl font-bold text-lime-600">WVA</a>
+
+        <!--Go to site buttons-->
         <div class="space-x-4">
           <a
             href="{{ url_for('input_tag_bp.input_tag') }}"
@@ -46,6 +45,8 @@
         </div>
       </nav>
     </header>
+
+    <!--Body content-->
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
       Site-Info Crawl
     </h1>
@@ -54,6 +55,7 @@
       So, it may take some minute.
     </p>
     <div class="flex justify-center w-screeen">
+      <!--Url input form-->
       <form method="post" action="{{ url_for('input_tag_bp.input_tag') }}">
         <label for="url" class="my-5 font-bold">Enter URL:</label>
         <div class="relative box-border mt-5 mb-2">
@@ -78,14 +80,18 @@
             >Go back to Home Page</a
           >
         </p>
+          <!--Loading circle animation-->
           <div id="loading" class="hidden animate-spin rounded-full h-20 w-20 border-t-2 border-b-2 border-green-500 mt-16 mx-auto"></div>
       </form>
     </div>
-    
+
+    <!--Team logo-->
     <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
       <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600"></a>
     </footer>
+    
+    <!--Loading circle animation script-->
     <script>
         document.querySelector('form').addEventListener('submit', function() {
             document.getElementById('loading').classList.remove('hidden');
